get_app_for_window_direct search ShellApp by window, before create.

https://bugzilla.gnome.org/show_bug.cgi?id=610324